Removed explicit http on iframe

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1 class="heading"></h1>
 	<div class="products">
-		<iframe src="http://www.heidts.com/" sandbox></iframe>
+		<iframe src="//www.heidts.com/" sandbox></iframe>
 	</div>
 </body>
 </html>
