Added product images and index stylesheet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,87 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Donald Haynes marketplace">
+	<link rel="stylesheet" type="text/css" src="index.css">
 	<title>Donald Haynes marketplace</title>
 </head>
 <body>
-	<h1 class="heading"></h1>
+	<h1 class="heading">Heidts auto parts distribution</h1>
 	<div class="products">
-		<iframe src="https://cors-anywhere.herokuapp.com/http://www.heidts.com/" sandbox></iframe>
+		<a target="_blank" href="http://www.heidts.com/parts/wheels/">
+			<img src="img/wheels.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/kits">
+			<img src="img/kits.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/brake-kits-master-cylinder/">
+			<img src="img/master_cylinder.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/steering-kits/">
+			<img src="img/steering.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/air-ride/">
+			<img src="img/air_ride.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/crossmembers/">
+			<img src="img/crossmember.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/control-arms">
+			<img src="img/control_arms.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/rack-and-pinion-kits/">
+			<img src="img/rack_pinion.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/springs-custom-racing-rates/">
+			<img src="img/spring.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/axles-driveshafts/">
+			<img src="img/axles.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/motor-mounts/">
+			<img src="img/motor_mount.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/rear-end-suspension/">
+			<img src="img/rear_end.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/chassis-stiffeners-drive-shaft-hoops/">
+			<img src="img/subframe_connector.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/drop-spindles-stock/">
+			<img src="img/spindle.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/parts-hardware/">
+			<img src="img/hardware.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/replacement-parts/">
+			<img src="img/replacement_parts.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/shocks-and-spring/">
+			<img src="img/shocks_spring.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/differential-housings/">
+			<img src="img/housing.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/coilovers-shocks/">
+			<img src="img/shocks.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/disc-brake-conversion/">
+			<img src="img/brakes.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/tub-mini-tub-panels/">
+			<img src="img/panel.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/swaybars/">
+			<img src="img/swaybar.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/columns/">
+			<img src="img/columns.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/panhard-kits/">
+			<img src="img/panhard.png">
+		</a>
+		<a target="_blank" href="http://www.heidts.com/parts/third-members-positraction/">
+			<img src="img/third_member.png">
+		</a>
 	</div>
 </body>
 </html>
