Fixed img link for springs and shocks

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<img src="img/replacement_parts.png">
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/shocks-and-spring/">
-			<img src="img/shocks_spring.png">
+			<img src="img/shock_spring.png">
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/differential-housings/">
 			<img src="img/housing.png">
