--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Donald Haynes marketplace">
-	<link rel="stylesheet" type="text/css" src="index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:500,700" rel="stylesheet">
 	<title>Donald Haynes marketplace</title>
 </head>
 <body>
