--- a/index.html
+++ b/index.html
@@ -10,81 +10,82 @@
 </head>
 <body>
 	<h1 class="heading">Heidts auto parts distribution</h1>
+	<h3>Products<h3><hr>
 	<div class="products">
 		<a target="_blank" href="http://www.heidts.com/parts/wheels/">
-			<img src="img/wheels.png">
+			<img src="img/wheels.png">Wheels
 		</a>
 		<a target="_blank" href="http://www.heidts.com/kits">
-			<img src="img/kits.png">
+			<img src="img/kits.png">Kits
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/brake-kits-master-cylinder/">
-			<img src="img/master_cylinder.png">
+			<img src="img/master_cylinder.png">Master cylinder
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/steering-kits/">
-			<img src="img/steering.png">
+			<img src="img/steering.png">Steering
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/air-ride/">
-			<img src="img/air_ride.png">
+			<img src="img/air_ride.png">Air ride
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/crossmembers/">
-			<img src="img/crossmember.png">
+			<img src="img/crossmember.png">Crossmember
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/control-arms">
-			<img src="img/control_arms.png">
+			<img src="img/control_arms.png">Control arms
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/rack-and-pinion-kits/">
-			<img src="img/rack_pinion.png">
+			<img src="img/rack_pinion.png">Rack & pinion
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/springs-custom-racing-rates/">
-			<img src="img/spring.png">
+			<img src="img/spring.png">Spring
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/axles-driveshafts/">
-			<img src="img/axles.png">
+			<img src="img/axles.png">Axles
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/motor-mounts/">
-			<img src="img/motor_mount.png">
+			<img src="img/motor_mount.png">Motor mount
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/rear-end-suspension/">
-			<img src="img/rear_end.png">
+			<img src="img/rear_end.png">Rear end
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/chassis-stiffeners-drive-shaft-hoops/">
-			<img src="img/subframe_connector.png">
+			<img src="img/subframe_connector.png">Subframe connector
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/drop-spindles-stock/">
-			<img src="img/spindle.png">
+			<img src="img/spindle.png">Spindle
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/parts-hardware/">
-			<img src="img/hardware.png">
+			<img src="img/hardware.png">Hardware
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/replacement-parts/">
-			<img src="img/replacement_parts.png">
+			<img src="img/replacement_parts.png">Replacement parts
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/shocks-and-spring/">
-			<img src="img/shock_spring.png">
+			<img src="img/shock_spring.png">Shocks & spring
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/differential-housings/">
-			<img src="img/housing.png">
+			<img src="img/housing.png">Housing
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/coilovers-shocks/">
-			<img src="img/shocks.png">
+			<img src="img/shocks.png">Shocks
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/disc-brake-conversion/">
-			<img src="img/brakes.png">
+			<img src="img/brakes.png">Brakes
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/tub-mini-tub-panels/">
-			<img src="img/panel.png">
+			<img src="img/panel.png">Panel
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/swaybars/">
-			<img src="img/swaybar.png">
+			<img src="img/swaybar.png">Swaybar
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/columns/">
-			<img src="img/columns.png">
+			<img src="img/columns.png">Columns
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/panhard-kits/">
-			<img src="img/panhard.png">
+			<img src="img/panhard.png">Panhard
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/third-members-positraction/">
-			<img src="img/third_member.png">
+			<img src="img/third_member.png">Third member
 		</a>
 	</div>
 </body>
