Fixed alignment of image titles

--- a/index.html
+++ b/index.html
@@ -13,79 +13,104 @@
 	<h3>Products<h3><hr>
 	<div class="products">
 		<a target="_blank" href="http://www.heidts.com/parts/wheels/">
-			<img src="img/wheels.png">Wheels
+			<img src="img/wheels.png">
+			<p>Wheels</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/kits">
-			<img src="img/kits.png">Kits
+			<img src="img/kits.png">
+			<p>Kits</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/brake-kits-master-cylinder/">
-			<img src="img/master_cylinder.png">Master cylinder
+			<img src="img/master_cylinder.png">
+			<p>Master cylinder</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/steering-kits/">
-			<img src="img/steering.png">Steering
+			<img src="img/steering.png">
+			<p>Steering</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/air-ride/">
-			<img src="img/air_ride.png">Air ride
+			<img src="img/air_ride.png">
+			<p>Air ride</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/crossmembers/">
-			<img src="img/crossmember.png">Crossmember
+			<img src="img/crossmember.png">
+			<p>Crossmember</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/control-arms">
-			<img src="img/control_arms.png">Control arms
+			<img src="img/control_arms.png">
+			<p>Control arms</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/rack-and-pinion-kits/">
-			<img src="img/rack_pinion.png">Rack & pinion
+			<img src="img/rack_pinion.png">
+			<p>Rack & pinion</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/springs-custom-racing-rates/">
-			<img src="img/spring.png">Spring
+			<img src="img/spring.png">
+			<p>Spring</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/axles-driveshafts/">
-			<img src="img/axles.png">Axles
+			<img src="img/axles.png"></p>
+			<p>Axles</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/motor-mounts/">
-			<img src="img/motor_mount.png">Motor mount
+			<img src="img/motor_mount.png">
+			<p>Motor mount</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/rear-end-suspension/">
-			<img src="img/rear_end.png">Rear end
+			<img src="img/rear_end.png">
+			<p>Rear end</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/chassis-stiffeners-drive-shaft-hoops/">
-			<img src="img/subframe_connector.png">Subframe connector
+			<img src="img/subframe_connector.png">
+			<p>Subframe connector</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/drop-spindles-stock/">
-			<img src="img/spindle.png">Spindle
+			<img src="img/spindle.png">
+			<p>Spindle</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/parts-hardware/">
-			<img src="img/hardware.png">Hardware
+			<img src="img/hardware.png">
+			<p>Hardware</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/replacement-parts/">
-			<img src="img/replacement_parts.png">Replacement parts
+			<img src="img/replacement_parts.png">
+			<p>Replacement parts</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/shocks-and-spring/">
-			<img src="img/shock_spring.png">Shocks & spring
+			<img src="img/shock_spring.png">
+			<p>Shocks & spring</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/differential-housings/">
-			<img src="img/housing.png">Housing
+			<img src="img/housing.png">
+			<p>Housing</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/coilovers-shocks/">
-			<img src="img/shocks.png">Shocks
+			<img src="img/shocks.png">
+			<p>Shocks</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/disc-brake-conversion/">
-			<img src="img/brakes.png">Brakes
+			<img src="img/brakes.png">
+			<p>Brakes</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/tub-mini-tub-panels/">
-			<img src="img/panel.png">Panel
+			<img src="img/panel.png">
+			<p>Panel</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/swaybars/">
-			<img src="img/swaybar.png">Swaybar
+			<img src="img/swaybar.png">
+			<p>Swaybar</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/columns/">
-			<img src="img/columns.png">Columns
+			<img src="img/columns.png">
+			<p>Columns</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/panhard-kits/">
-			<img src="img/panhard.png">Panhard
+			<img src="img/panhard.png">
+			<p>Panhard</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/third-members-positraction/">
-			<img src="img/third_member.png">Third member
+			<img src="img/third_member.png">
+			<p>Third member</p>
 		</a>
 	</div>
 </body>
