--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<h1 class="heading">Heidts auto parts distribution</h1>
-	<h3>Products<h3><hr>
+	<h3>Products</h3><hr>
 	<div class="products">
 		<a target="_blank" href="http://www.heidts.com/parts/wheels/">
 			<img src="img/wheels.png">
