Added contact buttons and favicons

--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Donald Haynes marketplace">
+	
+	<!--Favicon-->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ba2121">
+	<meta name="theme-color" content="#efefef">
+	
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:500,700" rel="stylesheet">
 	<title>Donald Haynes marketplace</title>
 </head>
 <body>
 	<h1 class="heading">Heidts auto parts distribution</h1>
-	<h3>Products</h3><hr>
+	<h2>Contact me for a purchase</h2><hr>
+	<div class="buttons">
+		<a class="email" target="_blank" href="mailto:ertccty1@gmail">
+			Email me at ertccty1@gmail.com to inquire about a purchase
+		</a>
+		<a class="paypal" target="_blank" href="#">
+			Visit my PayPal<br>&nbsp;
+			<img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppcmcvdam.png" alt="Pay with PayPal Credit or any major credit card"/>	
+		</a>
+	</div>
+	<h2>Browse products from Heidts</h2><hr>
 	<div class="products">
 		<a target="_blank" href="http://www.heidts.com/parts/wheels/">
 			<img src="img/wheels.png">
@@ -49,7 +69,7 @@
 			<p>Spring</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/axles-driveshafts/">
-			<img src="img/axles.png"></p>
+			<img src="img/axles.png">
 			<p>Axles</p>
 		</a>
 		<a target="_blank" href="http://www.heidts.com/parts/motor-mounts/">
@@ -112,6 +132,8 @@
 			<img src="img/third_member.png">
 			<p>Third member</p>
 		</a>
+		<!--A bunch of empty links so that flexbox aligns into a grid-->
+		<a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
 	</div>
 </body>
 </html>
