--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<title>Donald Haynes marketplace</title>
 </head>
 <body>
-	<h1 class="heading">Heidts auto parts distribution</h1>
+	<h1 class="heading">Donald Haynes<br>Heidts auto parts distribution</h1>
 	<h2>Contact me for a purchase</h2><hr>
 	<div class="buttons">
 		<a class="email" target="_blank" href="mailto:ertccty1@gmail">
