Fixed email link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<h1 class="heading">Donald Haynes<br>Heidts auto parts distribution</h1>
 	<h2>Contact me for a purchase</h2><hr>
 	<div class="buttons">
-		<a class="email" target="_blank" href="mailto:ertccty1@gmail">
+		<a class="email" target="_blank" href="mailto:ertccty1@gmail.com">
 			Email me at ertccty1@gmail.com to inquire about a purchase
 		</a>
 		<a class="paypal" target="_blank" href="#">
