Updated PayPal link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a class="email" target="_blank" href="mailto:ertccty1@gmail.com">
 			Email me at ertccty1@gmail.com to inquire about a purchase
 		</a>
-		<a class="paypal" target="_blank" href="#">
+		<a class="paypal" target="_blank" href="https://www.paypal.me/Partsplace06">
 			Visit my PayPal<br>&nbsp;
 			<img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/cc-badges-ppcmcvdam.png" alt="Pay with PayPal Credit or any major credit card"/>	
 		</a>
