Changed title of site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Donald Haynes marketplace">
+	<meta name="description" content="Partsplace06: Heidts distribution">
 	
 	<!--Favicon-->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -16,10 +16,10 @@
 	
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:500,700" rel="stylesheet">
-	<title>Donald Haynes marketplace</title>
+	<title>Partsplace06: Heidts distribution</title>
 </head>
 <body>
-	<h1 class="heading">Donald Haynes<br>Heidts auto parts distribution</h1>
+	<h1 class="heading">Partsplace06<br>Heidts auto parts distribution</h1>
 	<h2>Contact me for a purchase</h2><hr>
 	<div class="buttons">
 		<a class="email" target="_blank" href="mailto:ertccty1@gmail.com">
